@@ -364,9 +364,7 @@ public class ManageDatabase implements ApplicationContextAware, InitializingBean
   }
 
   public List<String> getTeamNamesForTenant(int tenantId) {
-    return teamsPerTenant.get(tenantId).stream()
-        .map(Team::getTeamname)
-        .collect(Collectors.toList());
+    return teamsPerTenant.get(tenantId).stream().map(Team::getTeamname).toList();
   }
 
   public Integer getTeamIdFromTeamName(int tenantId, String teamName) {
